# Comfyui-Segment-Queue-Runner

./: LICENSE  README.md  README_CN.md  pyproject.toml  requirements.txt  segment_queue_node.py
example_workflows/: [Segmented Queue] [Automatic Long Video Stitching] [Smooth Character Outfit Change] By_FeiHou.json
js/: segment_queue.js
locales/en/: nodeDefs.json
locales/zh/: nodeDefs.json
